[package]
name = "rule-engine-sp1-program"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sp1-zkvm = "4.0.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = "0.10"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
