[package]
name = "rule-engine-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rule-engine-host"
path = "src/main.rs"

[dependencies]
rule-engine-methods = { path = "../methods" }
risc0-zkvm = "1.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
