[package]
name = "anomaly-detector-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# ACCELERATED: Use RISC Zero's precompile version for 100x faster hashing
# See sdk/PRECOMPILES.md for more accelerated crates
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
