[package]
name = "signature-verified-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# ═══════════════════════════════════════════════════════════════════════════
# ACCELERATED CRYPTO - Using RISC Zero precompiles for 10-100x speedup!
# See sdk/PRECOMPILES.md for complete guide
# ═══════════════════════════════════════════════════════════════════════════

# SHA-256: ~100x faster (500K cycles → 5K cycles)
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

# secp256k1 ECDSA (Ethereum): ~100x faster (10M cycles → 100K cycles)
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256-v0.13.4-risczero.1", default-features = false, features = ["ecdsa", "unstable"] }
