[package]
name = "signature-verified-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.2.6", default-features = false, features = ["std", "unstable"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
risc0-bigint2 = "=1.2.6"

# ═══════════════════════════════════════════════════════════════════════════
# ACCELERATED CRYPTO - Using RISC Zero precompiles for 10-100x speedup!
# ═══════════════════════════════════════════════════════════════════════════

# SHA-256: ~100x faster (500K cycles → 5K cycles)
sha2 = "=0.10.6"

# Keccak-256: Required for Ethereum address derivation (keccak256, NOT SHA-3)
sha3 = { version = "0.10.8", default-features = false }

# secp256k1 ECDSA (Ethereum): ~100x faster (10M cycles → 100K cycles)
k256 = { version = "=0.13.3", default-features = false, features = ["ecdsa"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
