[package]
name = "xgboost-inference-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }

# ACCELERATED: Use RISC Zero's precompile version for 100x faster hashing
# See sdk/PRECOMPILES.md for more accelerated crates
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
